# Finance-Claude

./: .gitignore  .mcp.json  CLAUDE.local.md.example  CLAUDE.md  README.md  pyproject.toml  traw_quant_analysis.py
.claude/: settings.json
.claude/agents/: chart-analyst.md  compliance-officer.md  data-engineer.md  day-trade-analyst.md  dca-manager.md  orchestrator.md  portfolio-manager.md  quant-analyst.md  report-writer.md  research-analyst.md  risk-manager.md  signal-tracker.md
.claude/commands/: analyze.md  backtest.md  compliance-review.md  dca.md  quarterly-report.md  risk-check.md  scan.md  screen.md  swing.md  watch.md
.claude/hooks/: block-large-data-files.sh
.claude/mcp/: README.md  brave-search.md  chrome.md  fetch.md  financial-analysis.md  firecrawl.md  fred.md  glif.md  perplexity.md  playwright.md  polymarket.md  sqlite.md
.claude/output-styles/: memo.md
.claude/skills/: day-trade-setups.md  indicator-readings.md  swing-setups.md  zone-analysis.md
dashboard/: index.html  server.py
scripts/: launch-tradingview-debug.bat  launch_tv_debug.bat  launch_tv_debug.sh
src/financial_services/: __init__.py  __main__.py  server.py
src/financial_services/tools/: __init__.py  calculators.py  portfolio.py  stock.py  valuation.py
