[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "financial-services-mcp"
version = "0.1.0"
description = "MCP server plugin providing financial analysis capabilities for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "finance", "claude", "analysis"]
dependencies = [
    "mcp[cli]>=1.0.0",
    "yfinance>=0.2.40",
    "pydantic>=2.0.0",
]

[project.scripts]
financial-services-mcp = "financial_services.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/financial_services"]

[tool.hatch.metadata]
allow-direct-references = true
